@@ -181,7 +181,8 @@ using std::isspace;
 #include "../delobjs.h"
 #include "../dir.h"
 #include "../effects.h"
-#include "../exceptions.h"
+#include "../headers/exceptions.h"
+#include "../headers/common_types.h"
 #include "../exult.h"
 #include "../exult_constants.h"
 #include "../exult_types.h"
@@ -191,7 +192,7 @@ using std::isspace;
 #include "../game.h"
 #include "../gameclk.h"
 #include "../gamewin.h"
-#include "../gamma.h"
+#include "../headers/gamma.h"
 #include "../hash_utils.h"
 #include "../keyactions.h"
 #include "../keys.h"
